# password-kvstore

./: Cargo.toml  README.md
password-kvstore/: cli.rs  entry.rs  errors.rs  folder.rs  lib.rs  secret.rs  secret_box.rs  tool.rs  traits.rs  utils.rs
password-kvstore/data/: core.rs  from.rs  into.rs  mod.rs  ops.rs  seq.rs
