[package]
name = "password-kvstore"
version = "0.0.1"
description = "password-kvstore library"
readme = "README.md"
homepage = "https://crates.io/crates/password-kvstore"
license = "MIT"
edition = "2021"
autoexamples = false
autobenches = false


[lib]
name = "password_kvstore"
path = "password-kvstore/lib.rs"
# https://doc.rust-lang.org/reference/linkage.html
# crate-type = ["dylib"]  # #["lib", "dylib", "cdylib", "staticlib"]
doctest = false
bench = false

[dependencies]
argon2-kdf = "1.6.2"
bincode = "1.3.3"
chacha20 = { version = "0.9.1", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std", "stream"] }

clap = { version = "4.5.37", features = ["derive", "env", "string", "unicode", "wrap_help"] }
flate2 = "1.1.1"
hex = { version = "0.4.3", features = ["serde"] }
iocore = "2.3.1"
pbkdf2 = { version = "0.12.2", features = ["std", "sha2", "password-hash"] }
pkcs5 = { version = "0.7.1", features = ["des-insecure", "3des"] }
pkcs8 = { version = "0.10.2", features = ["des-insecure", "std", "pkcs5", "3des"] }
rand = { version = "0.9.1", features = ["serde"] }
rsa = { version = "0.9.8", features = ["serde", "sha2"] }
sanitation = "1.0.3"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
toml = "0.8.21"
url = "2.5.4"
